2010-09-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-find-article-by-message-id): Use EXAMINE instead of
	SELECT to get the message-id.

	* mail-source.el (mail-sources): Removed webmail support.
	(defvar): Ditto.
	(mail-source-fetcher-alist): Ditto.
	(mail-source-fetch-webmail): Removed.

	* webmail.el: Removed -- doesn't seem relevant any more.

	* gnus.el: Fix up make-obsolete-variable declarations throughout.

	* nnimap.el (nnimap-request-accept-article): Get the Message-ID without
	the \r.

2010-09-30  Julien Danjou  <julien@danjou.info>

	* gnus-agent.el (gnus-agent-add-group): Fix call to
	gnus-completing-read.

2010-09-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nndoc.el (nndoc-retrieve-groups): New function.

	* nnimap.el (nnimap-split-incoming-mail): If nnimap-split-methods is
	`default', use nnmail-split-methods.
	(nnimap-request-article): Downcase the NILs so that they are nil.

	* gnus-sum.el (gnus-valid-move-group-p): Make sure that `group' is a
	symbol.

	* nnimap.el (nnimap-open-connection): Revert the auto-network->starttls
	code, since if the user has requested network, that's what they ought
	to get.
	(nnimap-request-set-mark): Erase the buffer before issuing commands.
	(nnimap-split-rule): Mark as obsolete.

	* pop3.el (pop3-send-streaming-command, pop3-stream-length): New
	variable.

	* nnimap.el (nnimap-insert-partial-structure): Get the type from the
	correct slot, too.

2010-09-29  Julien Danjou  <julien@danjou.info>

	* gnus.el (gnus-local-domain): Declare variable obsolete.

	* gnus-util.el (gnus-icompleting-read): Require iswitchb. Fix history
	computing.
	(gnus-ido-completing-read): Require ido.

2010-09-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-registry.el: Don't prompt on load, which makes it impossible to
	build Gnus.

	* nnimap.el (nnimap-insert-partial-structure): Be way more permissive
	when interpreting the structures.
	(nnimap-request-accept-article): Add \r\n to the lines to make this